getMetaForInterests returns a hash table instead of an array. no more order by warning

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -13,3 +13,4 @@ firefox-appdir = browser
 [test_Interests_getTopInterest.js]
 [test_InterestsWebAPI_getTopInterests.js]
 [test_PlacesInterestsStorage_metadata.js]
+[test_Interests_metadata.js]
