Add unit test for making sure exposedProps is correctly set for WebAPI return values and callback values.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -11,6 +11,7 @@ firefox-appdir = browser
 [test_Storage_getRoundedTime.js]
 [test_PlacesInterestsStorage_getTopInterest.js]
 [test_Interests_getTopInterest.js]
+[test_InterestsWebAPI_exposedProps.js]
 [test_InterestsWebAPI_getTopInterests.js]
 [test_PlacesInterestsStorage_metadata.js]
 [test_Interests_metadata.js]
