--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -10,6 +10,7 @@ firefox-appdir = browser
 [test_PlacesTextClassifier.js]
 [test_Storage_addInterestVisit_oldVisits.js]
 [test_Storage_getRoundedTime.js]
+[test_PIS__execute.js]
 [test_PlacesInterestsStorage_addInterest_duplicates.js]
 [test_PlacesInterestsStorage_getTopInterest.js]
 [test_Interests_getTopInterest.js]
