Add a helper to extract the namespace from a full interest name.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -11,6 +11,7 @@ firefox-appdir = browser
 [test_Storage_addInterestVisit_oldVisits.js]
 [test_PIS__convertDateToDays.js]
 [test_PIS__execute.js]
+[test_PIS__extractNamespace.js]
 [test_PlacesInterestsStorage_addInterest_duplicates.js]
 [test_PlacesInterestsStorage_getTopInterest.js]
 [test_Interests_getTopInterest.js]
