Combine metadata table into the main interests table and expose setInterest/getInterests to access it.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -9,6 +9,8 @@ firefox-appdir = browser
 [test_PlacesInterestsStorage.js]
 [test_PlacesTextClassifier.js]
 [test_Storage_addInterestVisit_oldVisits.js]
+[test_PIS_getInterests.js]
+[test_PIS_setInterest.js]
 [test_PIS__convertDateToDays.js]
 [test_PIS__execute.js]
 [test_PIS__extractNamespace.js]
