Update moz_up_interests_visits to moz_interests_visits with days and visits instead of date_added and visit_count and change statements to use that new structure.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -10,6 +10,7 @@ firefox-appdir = browser
 [test_PlacesTextClassifier.js]
 [test_Storage_addInterestVisit_oldVisits.js]
 [test_PIS_addInterestHost.js]
+[test_PIS_addInterestVisit.js]
 [test_PIS_getInterests.js]
 [test_PIS_setInterest.js]
 [test_PIS__convertDateToDays.js]
