--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -11,6 +11,7 @@ firefox-appdir = browser
 [test_Storage_addInterestVisit_oldVisits.js]
 [test_PIS_addInterestHost.js]
 [test_PIS_addInterestVisit.js]
+[test_PIS_clearRecentVisits.js]
 [test_PIS_getInterests.js]
 [test_PIS_setInterest.js]
 [test_PIS__convertDateToDays.js]
