Convert getBucketsForInterest to getBucketsForInterests with the new query style. Rework the service's getTopInterests to chain multiple promises together now that diversity and buckets accept an array of interests. Remove the service's wrapper for getBucketsForInterests and update callers to directly call storage.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -12,6 +12,7 @@ firefox-appdir = browser
 [test_PIS_addInterestHost.js]
 [test_PIS_addInterestVisit.js]
 [test_PIS_clearRecentVisits.js]
+[test_PIS_getBucketsForInterests.js]
 [test_PIS_getInterests.js]
 [test_PIS_setInterest.js]
 [test_PIS__convertDateToDays.js]
