Convert reprocessRecentHistoryVisits to getRecentHistory with the new query style.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -14,6 +14,7 @@ firefox-appdir = browser
 [test_PIS_clearRecentVisits.js]
 [test_PIS_getBucketsForInterests.js]
 [test_PIS_getInterests.js]
+[test_PIS_getRecentHistory.js]
 [test_PIS_setInterest.js]
 [test_PIS__convertDateToDays.js]
 [test_PIS__execute.js]
