Hardcode 200 site limit for most frecent sites for addInterestForHost query.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -16,3 +16,4 @@ firefox-appdir = browser
 [test_InterestsWebAPI_getTopInterests.js]
 [test_PlacesInterestsStorage_metadata.js]
 [test_Interests_metadata.js]
+[test_PIS_AddInterestHosts.js]
