Normalize diversity computation by count of distinct host_ids in interests_hosts table.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -17,3 +17,4 @@ firefox-appdir = browser
 [test_PlacesInterestsStorage_metadata.js]
 [test_Interests_metadata.js]
 [test_PIS_AddInterestHosts.js]
+[test_PIS_Deversity.js]
