Ignore documents without a host by having _getPlacesHostForURI return empty for host-less URIs.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -3,6 +3,7 @@ head = head_interests.js
 tail =
 firefox-appdir = browser
 
+[test_I__getPlacesHostForURI.js]
 [test_Interests.js]
 [test_Matching.js]
 [test_PlacesInterestsStorage.js]
