Update getDiversityForInterests to use the new query style.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -13,6 +13,7 @@ firefox-appdir = browser
 [test_PIS_addInterestVisit.js]
 [test_PIS_clearRecentVisits.js]
 [test_PIS_getBucketsForInterests.js]
+[test_PIS_getDiversityForInterests.js]
 [test_PIS_getInterests.js]
 [test_PIS_getRecentHistory.js]
 [test_PIS_getScoresForNamespace.js]
@@ -27,4 +28,3 @@ firefox-appdir = browser
 [test_InterestsWebAPI_getTopInterests.js]
 [test_PlacesInterestsStorage_metadata.js]
 [test_Interests_metadata.js]
-[test_PIS_Deversity.js]
