--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -14,6 +14,7 @@ firefox-appdir = browser
 [test_PlacesInterestsStorage_getTopInterest.js]
 [test_Interests_getTopInterest.js]
 [test_InterestsWebAPI_exposedProps.js]
+[test_InterestsWebAPI_whitelist.js]
 [test_InterestsWebAPI_getTopInterests.js]
 [test_PlacesInterestsStorage_metadata.js]
 [test_Interests_metadata.js]
