--- a/toolkit/components/places/tests/browser/Makefile.in
+++ b/toolkit/components/places/tests/browser/Makefile.in
@@ -31,6 +31,8 @@ MOCHITEST_BROWSER_FILES = \
 	colorAnalyzer/dictionaryGeneric-16.png \
 	colorAnalyzer/extensionGeneric-16.png \
 	colorAnalyzer/localeGeneric.png \
+  browser_getinterest_privatebrowsing_perwindowpb.js \
+  browser_addinterest_privatebrowsing_perwindowpb.js \
 	$(NULL)
 
 # These are files that need to be loaded via the HTTP proxy server
@@ -53,6 +55,8 @@ MOCHITEST_FILES = \
 	favicon-normal16.png \
 	favicon-normal32.png \
 	favicon.html \
+	interests/video-games.html \
+	interests/cars.html \
 	$(NULL)
 
 include $(topsrcdir)/config/rules.mk
