Add getScoresForInterests to implement getInterestsByNames and share logic for packaging results for the web api.

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -3,7 +3,12 @@ head = head_interests.js
 tail =
 firefox-appdir = browser
 
+[test_I_getInterestsByNames.js]
+[test_I_getInterestsByNamespace.js]
 [test_I__getPlacesHostForURI.js]
+[test_I__packageInterests.js]
+[test_IWA_getInterests.js]
+[test_IWA_getTopInterests.js]
 [test_Interests.js]
 [test_Matching.js]
 [test_PlacesInterestsStorage.js]
@@ -16,15 +21,13 @@ firefox-appdir = browser
 [test_PIS_getDiversityForInterests.js]
 [test_PIS_getInterests.js]
 [test_PIS_getRecentHistory.js]
+[test_PIS_getScoresForInterests.js]
 [test_PIS_getScoresForNamespace.js]
 [test_PIS_setInterest.js]
 [test_PIS__convertDateToDays.js]
 [test_PIS__execute.js]
 [test_PIS__splitInterestName.js]
 [test_PlacesInterestsStorage_addInterest_duplicates.js]
-[test_Interests_getTopInterest.js]
 [test_InterestsWebAPI_exposedProps.js]
 [test_InterestsWebAPI_whitelist.js]
-[test_InterestsWebAPI_getTopInterests.js]
 [test_PlacesInterestsStorage_metadata.js]
-[test_Interests_metadata.js]
