mochitest-browser of interest api whitelist functionality

--- a/toolkit/components/places/tests/browser/Makefile.in
+++ b/toolkit/components/places/tests/browser/Makefile.in
@@ -33,6 +33,7 @@ MOCHITEST_BROWSER_FILES = \
 	colorAnalyzer/localeGeneric.png \
 	browser_getinterest_privatebrowsing_perwindowpb.js \
 	browser_addinterest_privatebrowsing_perwindowpb.js \
+	browser_interests_whitelist.js \
 	$(NULL)
 
 # These are files that need to be loaded via the HTTP proxy server
