Catch exception that otherwise terminates history resubmition

--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -31,3 +31,4 @@ firefox-appdir = browser
 [test_InterestsWebAPI_exposedProps.js]
 [test_InterestsWebAPI_whitelist.js]
 [test_PlacesInterestsStorage_metadata.js]
+[test_I_resubmitHistory.js]
