--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -7,6 +7,7 @@ firefox-appdir = browser
 [test_I_getInterestsByNamespace.js]
 [test_I__getPlacesHostForURI.js]
 [test_I__packageInterests.js]
+[test_I_resubmitRecentHistoryVisits.js]
 [test_IWA_getInterests.js]
 [test_IWA_getTopInterests.js]
 [test_Interests.js]
@@ -31,4 +32,3 @@ firefox-appdir = browser
 [test_InterestsWebAPI_exposedProps.js]
 [test_InterestsWebAPI_whitelist.js]
 [test_PlacesInterestsStorage_metadata.js]
-[test_I_resubmitHistory.js]
