--- a/toolkit/components/places/tests/interests/xpcshell.ini
+++ b/toolkit/components/places/tests/interests/xpcshell.ini
@@ -8,6 +8,7 @@ firefox-appdir = browser
 [test_I__getPlacesHostForURI.js]
 [test_I__packageInterests.js]
 [test_I_resubmitRecentHistoryVisits.js]
+[test_I_aboutProfilePayload.js]
 [test_IWA_getInterests.js]
 [test_IWA_getTopInterests.js]
 [test_Interests.js]
